@@ -32,7 +32,16 @@ cd $INSTANCE
 sed -n "$BEGIN","$END"p "$PARAMETER_FILE" > localParamFile.txt
 ln -s "../data" data
 
-java -Xmx512m -cp "../lib/*" repast.simphony.batch.InstanceRunner \
+java -Xmx512m \
+    --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+    --add-modules=ALL-SYSTEM \
+    --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED \
+    --add-exports=java.base/java.lang=ALL-UNNAMED \
+    --add-opens java.base/java.util=ALL-UNNAMED \
+    --add-exports=java.xml/com.sun.org.apache.xpath.internal.objects=ALL-UNNAMED \
+    --add-exports=java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED \
+    --add-opens java.base/java.lang=ALL-UNNAMED \
+    -cp "../lib/*" repast.simphony.batch.InstanceRunner \
     -pxml ../scenario.rs/batch_params.xml \
     -scenario ../scenario.rs \
     -id $SLURM_PROCID \
